Tests for persistence module